[gd_scene load_steps=16 format=3 uid="uid://deug8vwqga8to"]

[ext_resource type="Script" uid="uid://vdpqhx68jd4d" path="res://Scripts/Tanks/Tower.gd" id="1_qkqav"]
[ext_resource type="Script" uid="uid://b3iee6sj0pveh" path="res://Scripts/Tanks/projectile.gd" id="2_k8t06"]
[ext_resource type="Texture2D" uid="uid://d21vjp1o8gcgw" path="res://Assets/Drawn Assets/Tower Defence TileSet.png" id="3_0khgp"]
[ext_resource type="StyleBox" uid="uid://d2ua1h85dx643" path="res://Assets/Drawn Assets/tower_area_stylebox.tres" id="3_iku0a"]
[ext_resource type="Texture2D" uid="uid://8tl41v6brtqg" path="res://Assets/Drawn Assets/Projectile.png" id="3_y316y"]
[ext_resource type="Theme" uid="uid://qaxpm307f12q" path="res://Assets/UI.tres" id="6_y316y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6qccj"]
radius = 1.0

[sub_resource type="PackedScene" id="PackedScene_p0uxb"]
_bundled = {
"conn_count": 1,
"conns": PackedInt32Array(1073741828, 1073741827, 21, 20, 2, 0, 0),
"editable_instances": [],
"names": PackedStringArray("Projectile", "CharacterBody2D", "Proj", "motion_mode", "script", "speed", "Sprite2D", "Sprite2D", "position", "texture", "CollisionShape2D", "CollisionShape2D", "Proj", "position", "shape", "Timer", "Timer", "wait_time", "one_shot", "autostart", "_on_timer_timeout", "timeout"),
"node_count": 4,
"node_paths": [NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("Timer")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 3, 3, 0, 4, 1, 5, 2, 1, 2, 1073741824, 0, 7, 6, -1, 2, 8, 3, 9, 4, 0, 1073741825, 0, 11, 10, -1, 2, 13, 5, 14, 6, 1, 12, 1073741826, 0, 16, 15, -1, 3, 17, 7, 18, 8, 19, 9, 0),
"variants": [1, ExtResource("2_k8t06"), 1000.0, Vector2(0.5, 0.5), ExtResource("3_y316y"), Vector2(6, 0), SubResource("CircleShape2D_6qccj"), 5.0, true, true],
"version": 3
}

[sub_resource type="CircleShape2D" id="CircleShape2D_fy0dn"]
radius = 70.00714

[sub_resource type="AtlasTexture" id="AtlasTexture_iku0a"]
atlas = ExtResource("3_0khgp")
region = Rect2(0, 272, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_k8t06"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iku0a")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0khgp"]
radius = 16.5

[sub_resource type="Curve" id="Curve_8ivuq"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.4967742, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0khgp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iku0a"]

[node name="Proj Tower" type="Area2D" node_paths=PackedStringArray("particles", "vision", "vision_area", "upgrade_panel", "damage_button", "range_button", "fire_rate_button", "muzzle") groups=["Towers"]]
script = ExtResource("1_qkqav")
projectile = SubResource("PackedScene_p0uxb")
particles = NodePath("CPUParticles2D")
vision = NodePath("EnemDetectection/Vision_Area")
vision_area = NodePath("vision_area_pannel")
upgrade_panel = NodePath("Upgrade UI/panel")
damage_button = NodePath("Upgrade UI/panel/HBoxContainer/Damage")
range_button = NodePath("Upgrade UI/panel/HBoxContainer/Range")
fire_rate_button = NodePath("Upgrade UI/panel/HBoxContainer/Fire Rate")
muzzle = NodePath("Muzzle")

[node name="vision_area_pannel" type="Panel" parent="."]
unique_name_in_owner = true
offset_left = -70.0
offset_top = -70.0
offset_right = 70.0
offset_bottom = 70.0
theme_override_styles/panel = ExtResource("3_iku0a")

[node name="EnemDetectection" type="Area2D" parent="."]

[node name="Vision_Area" type="CollisionShape2D" parent="EnemDetectection"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_fy0dn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_k8t06")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("CircleShape2D_0khgp")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(16, 0)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 5.0
scale_amount_max = 15.0
scale_amount_curve = SubResource("Curve_8ivuq")
color = Color(0.55664, 0.45439997, 0.71, 1)

[node name="Upgrade Button" type="Button" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_0khgp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_iku0a")
toggle_mode = true

[node name="upgrade_pos" type="Marker2D" parent="."]
position = Vector2(0, 18)

[node name="Upgrade UI" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="panel" type="Panel" parent="Upgrade UI"]
visible = false
offset_left = -88.0
offset_top = 18.0
offset_right = 88.0
offset_bottom = 63.0
pivot_offset = Vector2(88, 0)
theme = ExtResource("6_y316y")

[node name="HBoxContainer" type="HBoxContainer" parent="Upgrade UI/panel"]
layout_mode = 0
offset_right = 176.0
offset_bottom = 45.0
pivot_offset = Vector2(88, 0)
theme_override_constants/separation = 8

[node name="Damage" type="Button" parent="Upgrade UI/panel/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 8
text = "Damage
lvl: 1
$99999
"

[node name="Fire Rate" type="Button" parent="Upgrade UI/panel/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 8
text = "Fire Rate
lvl: 1
$99999
"

[node name="Range" type="Button" parent="Upgrade UI/panel/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 8
text = "Range
lvl: 1
$99999
"

[connection signal="area_entered" from="EnemDetectection" to="." method="_on_enem_detectection_area_entered"]
[connection signal="area_exited" from="EnemDetectection" to="." method="_on_enem_detectection_area_exited"]
[connection signal="toggled" from="Upgrade Button" to="." method="_on_upgrade_button_toggled"]
[connection signal="pressed" from="Upgrade UI/panel/HBoxContainer/Damage" to="." method="_on_damage_pressed"]
[connection signal="pressed" from="Upgrade UI/panel/HBoxContainer/Fire Rate" to="." method="_on_fire_rate_pressed"]
[connection signal="pressed" from="Upgrade UI/panel/HBoxContainer/Range" to="." method="_on_range_pressed"]
